<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text"
        android:textAlignment="center"
        android:text="@string/missing_location_permission_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/image"
        android:layout_toEndOf="@+id/image" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/icon_lastknown_position"
        android:layout_alignBottom="@+id/text"
        android:layout_alignParentTop="true" />

    <Button
        android:text="@string/mainmenu"
        android:id="@+id/go_to_mainmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/go_to_ingame"
        android:layout_alignBottom="@+id/go_to_ingame"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/ingame"
        android:id="@+id/go_to_ingame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/grant_location_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grant_location_permission"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/text"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/or_switch_perspective"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/go_to_app_settings"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/app_settings_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/go_to_app_settings"
        android:layout_below="@+id/grant_location_permission"
        android:layout_centerHorizontal="true" />


</RelativeLayout>